istio-teaching/gateway-api/v1alpha2/referencepolicies/gw-listeners-tls-certificateRefs-namespace.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: bookinfo
spec:
  addresses:
  - value: istio-ingressgateway.istio-system.svc.cluster.local
    type: Hostname
  gatewayClassName: istio
  listeners:  
  - hostname: "bookinfo.com"
    port: 443
    name: bookinfo-gw
    protocol: HTTPS
    tls:
      options: {}
      certificateRefs:
      - name: bookinfo-gateway-secret
        namespace: istio
        kind: Secret
    allowedRoutes:
      namespaces:
        from: All
